[package]
name = "shardus-net"
version = "1.0.2"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.12", features = ["io-util", "sync", "net", "rt-multi-thread"] }
neon = { version = "0.9", default-features = false, features = ["napi-6", "channel-api"] }
once_cell = "1.8"
owning_ref = "0.4.1"
