[package]
name = "shardus_net"
version = "1.0.2"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
parse_core = { path = "../parse_core" }
bespoke_binary = { path = "../bespoke_binary" }
tokio = { version = "1.13", features = [
  "io-util",
  "sync",
  "net",
  "rt-multi-thread",
  "time",
] }
neon = { version = "0.9", default-features = false, features = [
  "napi-6",
  "channel-api",
] }
once_cell = "1.8"
owning_ref = "0.4"
thiserror = "1.0"
log = "0.4"
simplelog = "^0.10.0"
lru = "0.10.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
brotli = "3.3"
